--- a/HotelManagementDemo.WPFUI/MainWindow.xaml
+++ b/HotelManagementDemo.WPFUI/MainWindow.xaml
@@ -3,10 +3,22 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+        xmlns:views="clr-namespace:HotelManagementDemo.WPFUI.Views"
+        xmlns:vm="clr-namespace:HotelManagementDemo.WPFUI.ViewModels"
         xmlns:local="clr-namespace:HotelManagementDemo.WPFUI"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
-    <Grid>
-
-    </Grid>
+        Background="{StaticResource mainBackground}"
+        Title="Hotel Management System" 
+        Height="450"
+        Width="800">
+    <ContentControl Content="{Binding CurrentViewModel}">
+        <ContentControl.Resources>
+            <DataTemplate DataType="{x:Type vm:LoginViewViewModel}">
+                <views:LoginView/>
+            </DataTemplate>
+            <DataTemplate DataType="{x:Type vm:HomeViewViewModel}">
+                <views:HomeView/>
+            </DataTemplate>
+        </ContentControl.Resources>
+    </ContentControl>
 </Window>
